# talkthrough-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-install.md  llms.txt  pyproject.toml  server.json
.agents/skills/talkthrough/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  recipe.md
.github/workflows/: ci.yml  release.yml
commands/: backlog-from-demo.md  triage-recording.md
docs/: DESIGN.md  MODEL-NOTES.md  TROUBLESHOOTING.md
examples/: README.md  output-contract.schema.json
examples/prompts/: backlog-from-demo.md  correlate-with-logs.md  meeting-actions.md  spec-from-workshop.md  triage-recording.md
examples/recipes/: github-issues.md
integrations/: README.md
integrations/claude-code/: .mcp.json
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/agents/: feedback-triage.md
integrations/claude-code/commands/: backlog-from-demo.md  correlate-with-logs.md  meeting-actions.md  spec-from-workshop.md  triage-recording.md
integrations/claude-code/skills/talkthrough/: SKILL.md
integrations/claude-desktop/: manifest.json
integrations/cline/: README.md
integrations/codex/: README.md
integrations/copilot-cli/: README.md
integrations/cursor/: README.md
integrations/gemini-cli/: README.md
integrations/goose/: README.md
integrations/openclaw/: README.md
integrations/openclaw/clawhub/: SKILL.md
integrations/opencode/: README.md
integrations/windsurf/: README.md
integrations/zed/: README.md
scripts/: gen_integrations.py  make_demo_gif.py  make_social_preview.py
skills/talkthrough/: SKILL.md
src/talkthrough_mcp/: __init__.py  __main__.py  cli.py  guidance.py  server.py
src/talkthrough_mcp/core/: __init__.py  audio.py  dedup.py  diarize.py  errors.py  ffmpeg.py  frames.py  jobs.py  manifest.py  ocr.py  pipeline.py  probe.py  stt.py  wallclock.py
tests/: conftest.py
tests/e2e/: test_mcp_client.py
tests/fixtures/: make_fixtures.py  meeting-demo.m4a  meeting-two-voices.m4a  multilang-ru-demo.m4a
tests/fixtures/probe/: talkthrough-demo.format.json
tests/integration/: fixture_facts.py  test_diarization_integration.py  test_pipeline_integration.py
tests/unit/: test_dedup.py  test_diarize.py  test_frames.py  test_guidance.py  test_jobs.py  test_manifest.py  test_ocr_config.py  test_pipeline_config.py  test_server_tools.py  test_stt_echo.py  test_summarize.py  test_wallclock.py
